# CrewAI_test

./: README.md  communication_log.md  excel_analysis.xlsx  executive_report.md  presentation.pptx  pyproject.toml  qa_review.md  report.md  research_report.md  schedule_report.md
src/first_project/: crew.py  main.py
src/first_project/config/: agents.yaml  tasks.yaml
