[project]
name = "first_project"
version = "0.1.0"
description = "first_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
first_project = "first_project.main:run"
run_crew = "first_project.main:run"
train = "first_project.main:train"
replay = "first_project.main:replay"
test = "first_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
